--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul {
 
 h3 {
     margin: 0 10% 0 0;
-    font-size: 29px;
+    font-size: 28px;
 }
 
 h2 {
@@ -133,10 +133,6 @@ span {
 /* Погода в городе */
 /* Хэдер блока погоды */
 
-.delete-icon {
-    color: whitesmoke;
-}
-
 .city-header {
     display: flex;
     justify-content: space-between;
@@ -189,6 +185,28 @@ span {
     p,
     span {
         font-size: 12px;
+    }
+
+    h3 {
+        font-size: 24px;
+    }
+
+    .city-header .weather-icon {
+        width: 45px;
+    }
+    
+    .city-header .city-temp {
+        font-size: 40px;
+    }
+    
+    .delete-city-btn {
+        height: 30px;
+        width: 30px;
+        background: #7c7c7c;
+        color: whitesmoke;
+        border-radius: 100%;
+        border: 0;
+        font-size: 23px;
     }
 }
 
